--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,10 @@
 name = "search_algorithms"
-version = "1.0.0"
+version = "0.1.0"
+description = "A collection of common Search Algorithms"
+
+repository = { type = "github", user = "harris-miller", repo = "gleam_search_algorithms" }
+
+target = "erlang"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
 # your project to the Hex package manager.
