--- a/gleam.toml
+++ b/gleam.toml
@@ -1,21 +1,15 @@
+# https://gleam.run/writing-gleam/gleam-toml/.
+
 name = "search_algorithms"
 version = "0.1.0"
 description = "A collection of common Search Algorithms"
 
+licences = ["Apache-2.0"]
 repository = { type = "github", user = "harris-miller", repo = "gleam_search_algorithms" }
 
 target = "erlang"
 
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# description = ""
-# licences = ["Apache-2.0"]
-# repository = { type = "github", user = "", repo = "" }
-# links = [{ title = "Website", href = "" }]
-#
-# For a full reference of all the available options, you can have a look at
-# https://gleam.run/writing-gleam/gleam-toml/.
+internal_modules = ["search_algorithms/internal/*"]
 
 [dependencies]
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
