--- a/gleam.toml
+++ b/gleam.toml
@@ -15,6 +15,7 @@ internal_modules = ["internal/*"]
 gleam_stdlib = ">= 0.44.0 and < 2.0.0"
 gleam_deque = ">= 1.0.0 and < 2.0.0"
 gleam_yielder = ">= 1.1.0 and < 2.0.0"
+balanced_tree_gleam = ">= 0.1.0 and < 1.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
